Improve client verification form

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -45,7 +45,7 @@ ru:
             last_name:
               blank: 'Фамилия не указана'
             passport_data:
-              blank: 'Серия и номер  не указан'
+              blank: 'Серия и номер не указан'
             documents:
               blank: 'Документы не были прикреплены'
       messages:
@@ -53,7 +53,7 @@ ru:
   attributes:
     reasons:
       unban: 'Разблокировка учетной записи'
-      trusted_trader: 'Стать доверенным торгвоцем'
+      trusted_trader: 'Стать доверенным торговцем'
       restore: 'Восстановление утерянного аккаунта'
       other: 'Другое'
 
@@ -66,13 +66,13 @@ ru:
                         <a href="https://support.bitzlato.com" class="ng-binding">Служба поддержки</a>
                 </div>'
 
-    title: 'Заявка на верификацию аккаунта'
+    title: 'Заявка на верификацию аккаунта #%{account_id} в %{org}'
     text: '<p class="instructions__paragraph ng-binding" style="text-align: left;">
                      Пожалуйста, прикрепите 3 файла:<br>
                     <b>1)</b> Фото вашего паспорта или ID карты на фоне данного сайта.<br>
                     <b>2)</b> Селфи (фото вашего лица) рядом с удостоверением личности. Используйте форматы JPG, JPEG, PNG.<br>
                     <b>3)</b> MP4/MOV видео на котором видно Вас. При записи видео необходимо сказать фразу "Для верификации в Bitzlato. С условиями сервиса ознакомлен." Помимо этого, Ваш паспорт должен находится рядом с лицом во время записи видео.
-                    <b class="ng-binding">Помимо этого, на этом же видео необходимо снять сайт check.changebot.org. Рекомендуем воспользоваться возможностью переключения фронтальной и задней камеры. Учтите, что обязательно должен быть виден адрес check.changebot.org.</b>
+                    <b class="ng-binding">Помимо этого, на этом же видео необходимо снять сайт %{host}. Рекомендуем воспользоваться возможностью переключения фронтальной и задней камеры. Учтите, что обязательно должен быть виден адрес %{host}.</b>
                     <p class="taboList ng-binding" style="text-align: left;">
                     Примите во внимание, что:<br>
                     - Запрещается использовать графические редакторы.<br>
