--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -11,7 +11,7 @@ ru:
       verification:
         country: 'Гражданство'
         reason: 'Причина обращения'
-        status: 'Password'
+        status: 'Статус'
         email: 'Email, на который придет уведомление о статусе заявки'
         passport_data: 'Серия и Номер Паспорта'
         name: 'Ваше Имя'
@@ -22,6 +22,7 @@ ru:
         last_name: 'Ваша Фамилия (Ivanov)'
         subdomain: 'Поддомен'
         verification_callback_url: 'Адрес уведомлений'
+        return_url: 'Адрес возврата на сайт после подачи заявки'
 
     "yes": 'Yes'
     "no": 'No'
