Feautre/email readme admin [#181605136] (#15)
* [#181605136] add readme

* [#181605136] add email_from to admin

* Update simple_form.ru.yml

Co-authored-by: Danil Pismenny <dapi@users.noreply.github.com>

--- a/config/locales/simple_form.ru.yml
+++ b/config/locales/simple_form.ru.yml
@@ -22,6 +22,7 @@ ru:
         last_name: 'Ваша Фамилия (Ivanov)'
         subdomain: 'Поддомен'
         verification_callback_url: 'Адрес уведомлений'
+        email_from: 'Email с которого отправляются уведомления'
         return_url: 'Адрес возврата на сайт после подачи заявки'
 
     "yes": 'Yes'
