--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -30,6 +30,19 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 ru:
+  shared:
+    navbar:
+      verifications: 'Заявки на верификацию'
+      applicants: 'Аппликанты'
+      verification_new: 'Заявка от пользователя'
+      settings: 'Настройки'
+      exit: 'Выйти'
+      admins: 'Администраторы'
+      review_result_labels: 'Статусы верификаций'
+      profile: 'Профиль организации'
+
+
+
   activerecord:
     errors:
       models:
@@ -56,29 +69,6 @@ ru:
       trusted_trader: 'Стать доверенным торговцем'
       restore: 'Восстановление утерянного аккаунта'
       other: 'Другое'
-
-  instruction:
-    success:
-      text: '<div ng-show="vm.submited" style="text-align: justify; font-size: 1em;" class="ng-binding">
-                    <br><h2 style="text-align: center; margin-top: -17px;" class="ng-binding">Благодарим за подачу заявки!</h2><br> 
-                        Администрация сервиса рассмотрит Вашу заявку так быстро, насколько это возможно. В случае одобрения - верифицированы будут все Ваши аккаунты в сервисах Bitzlato.<br>
-                        В случае отказа - Вы получите соответствующее уведомление в течении 24-х часов.
-                        <a href="https://support.bitzlato.com" class="ng-binding">Служба поддержки</a>
-                </div>'
-
-    title: 'Заявка на верификацию аккаунта #%{account_id} в %{org}'
-    text: '<p class="instructions__paragraph ng-binding" style="text-align: left;">
-                     Пожалуйста, прикрепите 3 файла:<br>
-                    <b>1)</b> Фото вашего паспорта или ID карты на фоне данного сайта.<br>
-                    <b>2)</b> Селфи (фото вашего лица) рядом с удостоверением личности. Используйте форматы JPG, JPEG, PNG.<br>
-                    <b>3)</b> MP4/MOV видео на котором видно Вас. При записи видео необходимо сказать фразу "Для верификации в Bitzlato. С условиями сервиса ознакомлен." Помимо этого, Ваш паспорт должен находится рядом с лицом во время записи видео.
-                    <b class="ng-binding">Помимо этого, на этом же видео необходимо снять сайт %{host}. Рекомендуем воспользоваться возможностью переключения фронтальной и задней камеры. Учтите, что обязательно должен быть виден адрес %{host}.</b>
-                    <p class="taboList ng-binding" style="text-align: left;">
-                    Примите во внимание, что:<br>
-                    - Запрещается использовать графические редакторы.<br>
-                    - Необходимая информация должна быть отчетливо видна.<br>
-                    - Используйте естественное освещение при записи видео.<br>
-                    - В случае необходимости служба поддержки может запросить дополнительную информацию, например - фото карты на фоне данного сайта.'
   period: Период
   income:
     total:
