--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -41,6 +41,33 @@ ru:
       review_result_labels: 'Статусы верификаций'
       profile: 'Профиль организации'
 
+  ## поисковые формы
+  simple_form:
+    placeholders:
+      defaults:
+        created_at_gteq: ''
+        created_at_lt: ''
+        legacy_verification_id_cont: '1234567'
+        document_number_cont: '777 888888'
+        name_or_last_name_cont: 'Griogriy Ivanov'
+        first_name_or_last_name_cont: 'Griogriy Ivanov'
+    hints:
+      defaults:
+        created_at_gteq: ''
+        created_at_lt: ''
+        legacy_verification_id_cont: ''
+        document_number_cont: 'Номер пасспорта'
+        name_or_last_name_cont: 'На английском'
+        first_name_or_last_name_cont: 'На английском'
+    labels:
+      defaults:
+        created_at_gteq: 'Создано после:'
+        created_at_lt: 'Создано до:'
+        legacy_verification_id_cont: 'ID содержит:'
+        document_number_cont: 'Номер паспорта содержит:'
+        name_or_last_name_cont: 'Имя\Фамилия содержит:'
+        first_name_or_last_name_cont: 'Griogriy Ivanov'
+
 
 
   activerecord:
