--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -72,7 +72,7 @@ ru:
         legacy_verification_id_cont: 'ID содержит:'
         document_number_cont: 'Номер паспорта содержит:'
         name_or_last_name_cont: 'Имя\Фамилия содержит:'
-        first_name_or_last_name_cont: 'Griogriy Ivanov'
+        first_name_or_last_name_cont: 'Имя\Фамилия содержит:'
 
 
 
