--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,6 +11,9 @@ ru:
     verifications:
       blocked:
         message: Для вашего аккаунта подача заявок была заблокирована
+      new:
+        title:  'Заявка на верификацию аккаунта #%{account_id} в %{org}'
+
   admin:
     accounts:
       verification_callback_test:
