--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -13,6 +13,13 @@ ru:
         message: Для вашего аккаунта подача заявок была заблокирована
       new:
         title:  'Заявка на верификацию аккаунта #%{account_id} в %{org}'
+      created:
+        message: '<div ng-show="vm.submited" style="text-align: justify; font-size: 1em;" class="ng-binding">
+                    <br><h2 style="text-align: center; margin-top: -17px;" class="ng-binding">Благодарим за подачу заявки!</h2><br> 
+                        Администрация сервиса рассмотрит Вашу заявку так быстро, насколько это возможно. В случае одобрения - верифицированы будут все Ваши аккаунты в сервисах.<br>
+                        В случае отказа - Вы получите соответствующее уведомление в течении 24-х часов.
+                        <a href="https://support.bitzlato.com" class="ng-binding">Служба поддержки</a>
+                </div>'
 
   admin:
     accounts:
