--- a/config/locales/views.ru.yml
+++ b/config/locales/views.ru.yml
@@ -3,3 +3,8 @@ ru:
     profile:
       show:
         title: Настройки пользователя
+  legacy:
+    verifications:
+      error:
+        title: Произошла непредвиденная ошибка
+        message: Пожалуйста, обратитесь в техподдержку
