--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -40,8 +40,8 @@ ru:
         create_new_confirm: Точно создать новый секрет?
 
     verifications:
-      duplicates:
-        dup_documents: 'Найдены дупликаты по паспорту: %{count} шт'
+      attributes:
+        dup_documents: 'Найдены дупликаты по документы: %{count} шт'
         dup_names: 'Найдены дупликаты по имени: %{count} шт'
         dup_emails: 'Найдены дупликаты по email: %{count} шт'
       show:
