[#181791293] вход через html

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -128,3 +128,23 @@ ru:
         error:
           title: Произошла непредвиденная ошибка
           message: Пожалуйста, обратитесь в техподдержку
+  public:
+    sessions:
+      form:
+        reset_password: Восстановить пароль
+      nav:
+        signin: Вход
+        signup: Регистрация
+
+    password_resets:
+      create:
+        content: Если такой пользователь есть в системе, то на указанный емайл отправлена инструкция для восстановления пароля.
+        bethink: Вспомнил! Войти
+      edit:
+        hint: Установите новый пароль
+        new_password: Новый пароль
+        submit: Установить
+        title: Приветствую, %{name}!
+      new:
+        bethink: Вспомнил! Войти
+        title: Восстановление пароля
