--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -83,6 +83,8 @@ ru:
       verifications: 'Заявки на верификацию'
       applicants: 'Аппликанты'
       verification_new: 'Заявка от пользователя'
+      verification_new_long: 'Заявка от пользователя'
+      verification_new_short: 'Заявка от пользователя (короткая)'
       settings: 'Настройки'
       exit: 'Выйти'
       admins: 'Администраторы'
