--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -41,6 +41,10 @@ ru:
         create_new_confirm: Точно создать новый секрет?
 
     verifications:
+      attributes:
+        dup_documents: 'Найдены дупликаты по документы: %{count} шт'
+        dup_names: 'Найдены дупликаты по имени: %{count} шт'
+        dup_emails: 'Найдены дупликаты по email: %{count} шт'
       show:
         confirm: 'Подтвердить'
         comfirm_alert:  'Подтверждаем заявку?'
@@ -106,7 +110,7 @@ ru:
         created_at_gteq: ''
         created_at_lt: ''
         legacy_verification_id_cont: ''
-        document_number_cont: 'Номер пасспорта'
+        document_number_cont: 'Номер паспорта'
         name_or_last_name_cont: 'На английском'
         first_name_or_last_name_cont: 'На английском'
     labels:
