--- a/config/locales/models.ru.yml
+++ b/config/locales/models.ru.yml
@@ -1,7 +1,7 @@
 ru:
   activerecord:
     models:
-      applicant: Аппликант
+      applicant: Заявитель
     errors:
       models:
         verification:
