--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -84,9 +84,9 @@ ru:
 
   shared:
     navbar:
-      verifications: 'Заявки на верификацию'
+      verifications: 'Заявки'
       applicants: 'Заявители'
-      verification_new: 'Заявка от пользователя'
+      verification_new: 'Заявка'
       verification_new_long: 'Заявка от пользователя'
       verification_new_short: 'Заявка от пользователя (короткая)'
       settings: 'Настройки'
@@ -103,24 +103,22 @@ ru:
         created_at_lt: ''
         legacy_verification_id_cont: '1234567'
         document_number_cont: '777 888888'
-        name_or_last_name_cont: 'Griogriy Ivanov'
-        first_name_or_last_name_cont: 'Griogriy Ivanov'
+        name_or_last_name_or_patronymic_cont: 'Griogriy Ivanov'
+        first_name_or_last_name_or_patronymic_cont: 'Griogriy Ivanov'
     hints:
       defaults:
         created_at_gteq: ''
         created_at_lt: ''
         legacy_verification_id_cont: ''
         document_number_cont: 'Номер паспорта'
-        name_or_last_name_cont: 'На английском'
-        first_name_or_last_name_cont: 'На английском'
     labels:
       defaults:
         created_at_gteq: 'Создано после:'
         created_at_lt: 'Создано до:'
         legacy_verification_id_cont: 'ID содержит:'
         document_number_cont: 'Номер паспорта содержит:'
-        name_or_last_name_cont: 'Имя\Фамилия содержит:'
-        first_name_or_last_name_cont: 'Имя\Фамилия содержит:'
+        name_or_last_name_or_patronymic_cont: 'Имя\Отчество\Фамилия содержит:'
+        first_name_or_last_name_or_patronymic_cont: 'Имя\Отчество\Фамилия содержит:'
 
 
 
