--- a/config/locales/admin.ru.yml
+++ b/config/locales/admin.ru.yml
@@ -1,10 +1,43 @@
 ru:
   admin:
+    accounts:
+      verification_callback_test:
+        result: 'Результат'
+        status: 'Статус'
+      show:
+        settings: Настройки
+        secret: Секрет
+        form_description: Описание для формы
+        available_variables: Доступные переменные
+        callback_test_tile: Проверка отправки уведомлений
+        notification_example: Пример уведомления
+        save: Сохранить
+        send: Отправить
+        create_new: Создать новый
+        create_new_confirm: Точно создать новый секрет?
+
     verifications:
-      index_form:
-        query_hint: Поиск по ФИО, email или номеру документа
-        query_placeholder: Ivanov
+      show:
+        confirm: 'Подтвердить'
+        comfirm_alert:  'Подтверждаем заявку?'
+        refuse: 'Отклонить'
+
     applicants:
       index_form:
         query_hint: Поиск по ФИО, external_id
+        query_placeholder: Ivanov
+      buttons:
+        block:  Заблокировать
+        unblock: Разблокировать
+      verifications:
+        title: Список верификаций
+    verifications:
+      show:
+        refuse: Отклонить
+      header:
+        similar_documents: 'Найдены совпадения: %{count} шт'
+        similar_names: 'Найдены совпадения: %{count} шт'
+        similar_emails: 'Найдены совпадения: %{count} шт'
+      index_form:
+        query_hint: Поиск по ФИО, email или номеру документа
         query_placeholder: Ivanov
